--- a/src/components/welcome.css
+++ b/src/components/welcome.css
@@ -84,6 +84,7 @@
 #create-chat-room-modal {
     background-color: rgb(50, 50, 50);
     border-radius: 5px;
+    color: white;
 }
 
 #create-chat-room-modal-heading-close {
@@ -121,6 +122,7 @@
 #create-chat-group-modal {
     background-color: rgb(50, 50, 50);
     border-radius: 5px;
+    color: white;
 }
 
 #create-chat-group-modal-heading-close {
@@ -222,13 +224,14 @@
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
+    color: white;
 }
 
 #chat-room-msg-area {
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 67vh;
+    height: 60vh;
     flex-direction: column-reverse;
 }
 
@@ -241,6 +244,7 @@
     width: fit-content;
     border-radius: 20px;
     max-width: 300px;
+    color: white;
 }
 
 #chat-room-msg-area-receiver {
@@ -252,6 +256,7 @@
     width: fit-content;
     border-radius: 20px;
     max-width: 300px;
+    color: white;
 }
 
 #chat-room-msg-field {
@@ -286,13 +291,14 @@
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
+    color: white;
 }
 
 #chat-group-msg-area {
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 67vh;
+    height: 60vh;
     flex-direction: column-reverse;
 }
 
@@ -305,6 +311,7 @@
     width: fit-content;
     border-radius: 20px;
     max-width: 300px;
+    color: white;
 }
 
 #chat-group-msg-area-receiver {
@@ -316,6 +323,7 @@
     width: fit-content;
     border-radius: 20px;
     max-width: 300px;
+    color: white;
 }
 
 #chat-group-msg-field {
@@ -324,4 +332,116 @@
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+
+#mobile-create-room-group-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    display: none;
+}
+
+#mobile-create-room-group-button div {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#mobile-create-room-group-button div button {
+    width: 100%;
+    color: white;
+    background-color: #9C27B0;
+    font-family: 'roboto';
+    border-color: #9C27B0;
+    /* z-index: 1; */
+    font-size: large;
+    border-color: #9C27B0;
+    font-weight: 500;
+}
+
+#chat-room-msg-header div {
+    display: flex;
+    align-items: center;
+}
+
+#chat-group-msg-header div {
+    display: flex;
+    align-items: center;
+}
+
+
+@media only screen and (max-width:775px) {
+    #main-page-navbar {
+        background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        height: 75px;
+    }
+
+    #main-page-logo-button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        right: 50px;
+    }
+
+    #create-room-group-button {
+        display: none;
+    }
+
+    #main-page-profile {
+        margin-right: 25px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: white;
+    }
+
+    #mobile-create-room-group-button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    #chat-room {
+        background-color: black;
+        height: 84vh;
+        width: 100%;
+        border-right: white 1px solid;
+    }
+
+    #chat-room-msg {
+        background-color: rgb(50, 50, 50);
+        height: 84vh;
+        width: 0%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #chat-group {
+        background-color: black;
+        height: 84vh;
+        width: 100%;
+        border-right: white 1px solid;
+    }
+
+    #chat-group-msg {
+        background-color: rgb(50, 50, 50);
+        height: 84vh;
+        width: 0%;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
