--- a/src/components/home.css
+++ b/src/components/home.css
@@ -5,6 +5,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 }
 
 @keyframes gradientAnimation {
@@ -28,4 +29,24 @@
     padding: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     min-width: 350px;
+}
+
+@media only screen and (max-width:775px) {
+    #home-container-div {
+        background: linear-gradient(135deg, #7209b7, #3a0ca3, #3f37c9, #46aafa);
+        animation: gradientAnimation 10s ease infinite alternate;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        overflow-x: hidden;
+    }
+
+    #home-sign-up-container {
+        background: linear-gradient(135deg, #f5f5f5, #e0e0e0, #ffffff);
+        border-radius: 10px;
+        padding: 20px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        min-width: 290px;
+    }
 }
