--- a/src/components/welcome.css
+++ b/src/components/welcome.css
@@ -206,6 +206,7 @@
     height: 84vh;
     width: 35%;
     border-right: white 1px solid;
+    overflow-y: auto;
 }
 
 #chat-room-msg {
@@ -273,6 +274,7 @@
     height: 84vh;
     width: 35%;
     border-right: white 1px solid;
+    overflow-y: auto;
 }
 
 #chat-group-msg {
@@ -371,6 +373,108 @@
 #chat-group-msg-header div {
     display: flex;
     align-items: center;
+}
+
+#user-profile-info {
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#user-profile-info button {
+    background-color: rgba(0, 0, 0);
+    cursor: pointer;
+    border: none;
+    font-family: roboto;
+    font-size: 14px;
+    color: white;
+    text-decoration: underline;
+}
+
+#user-profile-info button:active {
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    border: none;
+    font-family: roboto;
+    font-size: 14px;
+    color: black;
+    text-decoration: underline;
+}
+
+#room-info {
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#room-info button {
+    background-color: rgba(0, 0, 0);
+    cursor: pointer;
+    border: none;
+    font-family: roboto;
+    font-size: 14px;
+    color: white;
+    text-decoration: underline;
+}
+
+#room-info button:active {
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    border: none;
+    font-family: roboto;
+    font-size: 14px;
+    color: black;
+    text-decoration: underline;
+}
+
+#group-info {
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#group-info button {
+    background-color: rgba(0, 0, 0);
+    cursor: pointer;
+    border: none;
+    font-family: roboto;
+    font-size: 14px;
+    color: white;
+    text-decoration: underline;
+}
+
+#group-info button:active {
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    border: none;
+    font-family: roboto;
+    font-size: 14px;
+    color: black;
+    text-decoration: underline;
 }
 
 
